@startuml

' Simple classes
class Title {
    - name : String
}
class Label {
    - labelName : String
}
class ReleaseDate {
    - releaseDate : Date
}

' Person class
class Person {
    - name :
    - stageName :

    + getName() : Name
    + getStageName() : StageName
    + toString() : String
    + nameToString() : String
    + stageNameToString() : String
}

' Performer and Writer are roles connected to Person
class Performer {
}
class Writer {
}

Performer --> Person : identity
Writer --> Person : identity

' Album class
class Album {

     - albumTitle : Title
     - albumPerformer : Performer
     - releaseDate : ReleaseDate
     - albumLabel : Label
     - songs : ArrayList<Song>

     + Album(albumTitle : Title, albumPerformer : Performer, releaseDate : ReleaseDate, albumLabel : Label, songs : ArrayList<Song>)

     + getAlbumTitle() : Title
     + getAlbumLabel() : Label
     + getReleaseDate() : ReleaseDate
     + getAlbumPerformer() : Performer
     + addSongs(song : Song) : void
     + removeSongs(song : Song) : void
     + getSongs() : ArrayList<Song>
     + getNumberOfSongs() : int
     + toString() : String

}

Album --> Title : has one
Album --> Label : has one
Album --> ReleaseDate : has one
Album --> Performer : has one
Album --> "0..*" Song : contains

' Song class
class Song {

    - songTitle : Title
    - releaseDate : ReleaseDate
    - performers : ArrayList<Performer>
    - labelName : Label
    - writer : Writer

    + Song(songTitle : Title, releaseDate : ReleaseDate, performers : ArrayList<Performer>, labelName : Label, writer : Writer)

    + getSongTitle() : Title
    + getReleaseDate() : ReleaseDate
    + getLabel() : Label
    + getSongWriter() : Writer
    + getPerformers() : ArrayList<Performer>
    + addPerformer(performer : Performer) : void
    + countPerformers() : int
    + toString() : String

}

Song --> Title : has one
Song --> Label : has one
Song --> ReleaseDate : has one
Song --> Writer : has one
Song --> "1..*" Performer : performed by

@enduml

